add initial 3c decoder

--- a/params.yml
+++ b/params.yml
@@ -1,3 +1,5 @@
-listenuri: pandora/brz
+listenuri: amplab/sensors
 signal: dedup
 type4_base: amplab/sensors
+type5_base: amplab/sensors
+type6_base: amplab/sensors
